DXC管理下のGitからの移行

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">ImageSearch_DXC</string>
+    <string name="app_name">ImageSearch</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="gallery">Gallery</string>
 </resources>
